--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     name: Build Linux wheels
     runs-on: ${{ matrix.platform.runner }}
     strategy:
+      fail-fast: ${{ github.event_name != 'workflow_dispatch' }}
       matrix:
         platform:
           - runner: ubuntu-latest
@@ -67,6 +68,7 @@ jobs:
     name: Build Windows wheels
     runs-on: windows-latest
     strategy:
+      fail-fast: ${{ github.event_name != 'workflow_dispatch' }}
       matrix:
         platform:
           - target: x86_64-pc-windows-msvc
@@ -103,6 +105,7 @@ jobs:
     name: Build macOS wheels
     runs-on: ${{ matrix.platform.runner }}
     strategy:
+      fail-fast: ${{ github.event_name != 'workflow_dispatch' }}
       matrix:
         platform:
           - runner: macos-15
